package edu.hitsz.application;

import edu.hitsz.aircraft.AbstractAircraft;
import edu.hitsz.aircraft.BossEnemy;
import edu.hitsz.aircraft.EliteEnemy;
import edu.hitsz.aircraft.ElitePlusEnemy;
import edu.hitsz.aircraft.EliteProEnemy;
import edu.hitsz.aircraft.EnemyAircraft;
import edu.hitsz.aircraft.HeroAircraft;
import edu.hitsz.basic.AbstractFlyingObject;
import edu.hitsz.bullet.BaseBullet;
import edu.hitsz.bullet.HeroBullet;
import edu.hitsz.dao.FileLeaderboardDao;
import edu.hitsz.dao.LeaderboardDao;
import edu.hitsz.factory.EnemySimpleFactory;
import edu.hitsz.factory.SupplySimpleFactory;
import edu.hitsz.model.ScoreRecord;
import edu.hitsz.supply.AbstractSupply;

import javax.swing.JPanel;
import javax.swing.SwingUtilities;
import java.awt.Container;
import java.awt.AlphaComposite;
import java.awt.Color;
import java.awt.Font;
import java.awt.Graphics;
import java.awt.Graphics2D;
import java.awt.Window;
import java.awt.image.BufferedImage;
import java.nio.file.Paths;
import java.time.LocalDateTime;
import java.util.LinkedList;
import java.util.List;
import java.util.Timer;
import java.util.TimerTask;

public abstract class Game extends JPanel {

    private final boolean audioEnabled;
    private final boolean resultPresentationEnabled;
    private final GameDifficulty difficulty;
    private final BufferedImage backgroundImage;
    private int backGroundTop = 0;
    private int time = 0;
    private final Timer timer;
    private final int timeInterval = 40;
    private final LeaderboardDao leaderboardDao;

    private final HeroAircraft heroAircraft;
    private final HeroController heroController;
    private final List<AbstractAircraft> enemyAircrafts;
    private final List<BaseBullet> heroBullets;
    private final List<BaseBullet> enemyBullets;
    private final List<AbstractSupply> supplies;

    private final int enemyMaxNumber;
    protected double enemySpawnCycle = 20;
    private int enemySpawnCounter = 0;
    protected double heroShootCycle = 6;
    protected double enemyShootCycle = 6;
    private int shootCounter = 0;
    private int score = 0;
    private boolean gameOverFlag = false;
    private boolean gameClearFlag = false;
    private boolean leaderboardHandled = false;
    private boolean bossSpawned = false;
    private int heroTrailX;
    private int heroTrailY;

    public Game(GameDifficulty difficulty) {
        this(difficulty, new FileLeaderboardDao(Paths.get("data", "leaderboard.txt")), true, true);
    }

    protected Game(GameDifficulty difficulty, LeaderboardDao leaderboardDao, boolean audioEnabled, boolean resultPresentationEnabled) {
        this.difficulty = difficulty;
        this.backgroundImage = ImageManager.getBackgroundImage(difficulty);
        this.enemyMaxNumber = getInitialEnemyMaxNumber();
        this.enemySpawnCycle = getInitialEnemySpawnCycle();
        this.heroShootCycle = getInitialHeroShootCycle();
        this.enemyShootCycle = getInitialEnemyShootCycle();
        heroAircraft = HeroAircraft.getInstance(
                Main.WINDOW_WIDTH / 2,
                Main.WINDOW_HEIGHT - ImageManager.HERO_IMAGE.getHeight(),
                0,
                0,
                difficulty.getHeroInitialHp()
        );

        enemyAircrafts = new LinkedList<>();
        heroBullets = new LinkedList<>();
        enemyBullets = new LinkedList<>();
        supplies = new LinkedList<>();

        heroController = new HeroController(this, heroAircraft);
        heroTrailX = heroAircraft.getLocationX();
        heroTrailY = heroAircraft.getLocationY();
        this.leaderboardDao = leaderboardDao;
        this.audioEnabled = audioEnabled;
        this.resultPresentationEnabled = resultPresentationEnabled;
        this.timer = new Timer("game-action-timer", true);
        if (audioEnabled) {
            SoundManager.playBgm();
        }
    }

    public static Game create(GameDifficulty difficulty) {
        switch (difficulty) {
            case EASY:
                return new EasyGame();
            case HARD:
                return new HardGame();
            case NORMAL:
            default:
                return new NormalGame();
        }
    }

    public final void action() {
        TimerTask task = new TimerTask() {
            @Override
            public void run() {
                if (gameOverFlag || gameClearFlag) {
                    return;
                }
                time++;
                updateHeroStatus();
                updateHeroControl();
                updateDifficultyAction();
                spawnEnemyAction();
                shootAction();
                bulletsMoveAction();
                aircraftsMoveAction();
                crashCheckAction();
                postProcessAction();
                repaint();
                checkResultAction();
            }
        };
        timer.schedule(task, 0, timeInterval);
    }

    private void updateHeroStatus() {
        if (heroAircraft.isHomingActive()) {
            heroAircraft.reduceHomingDuration(1);
        }
        if (heroAircraft.isScatterShootActive()) {
            heroAircraft.reduceScatterShootDuration(1);
        }
        if (heroAircraft.isCircleShootActive()) {
            heroAircraft.reduceCircleShootDuration(1);
        }
        if (heroAircraft.isDodging()) {
            heroAircraft.reduceDodgeDuration(1);
        }
        if (heroAircraft.getDodgeCooldown() > 0) {
            heroAircraft.reduceDodgeCooldown(1);
        }
    }

    private void updateHeroControl() {
        heroTrailX += (heroAircraft.getLocationX() - heroTrailX) / 3;
        heroTrailY += (heroAircraft.getLocationY() - heroTrailY) / 3;
        heroController.update(heroAircraft);
        if (heroController.consumeDodgeTriggered()) {
            heroAircraft.activateDodge();
        }
    }

    private void spawnEnemyAction() {
        enemySpawnCounter++;
        if (enemySpawnCounter < enemySpawnCycle) {
            return;
        }
        enemySpawnCounter = 0;

        if (canGenerateBoss() && !bossSpawned && score >= getBossTriggerScore()) {
            bossSpawned = true;
            enemyAircrafts.add(createBossEnemy());
            if (audioEnabled) {
                SoundManager.playBossBgm();
            }
            return;
        }

        if (enemyAircrafts.size() < enemyMaxNumber) {
            enemyAircrafts.add(createEnemyAircraft(time, hasActiveBoss()));
        }
    }

    private boolean hasActiveBoss() {
        for (AbstractAircraft enemyAircraft : enemyAircrafts) {
            if (enemyAircraft instanceof BossEnemy && !enemyAircraft.notValid()) {
                return true;
            }
        }
        return false;
    }

    private void shootAction() {
        if (!heroController.isFirePressed()) {
            shootCounter = 0;
        } else {
            shootCounter++;
            if (shootCounter >= heroShootCycle) {
                shootCounter = 0;
                heroBullets.addAll(heroAircraft.shoot());
            }
        }

        if (time % (int) enemyShootCycle != 0) {
            return;
        }
        for (AbstractAircraft enemyAircraft : enemyAircrafts) {
            if (canEnemyShoot(enemyAircraft)) {
                enemyBullets.addAll(enemyAircraft.shoot());
            }
        }
    }

    private void bulletsMoveAction() {
        for (BaseBullet bullet : heroBullets) {
            if (bullet instanceof HeroBullet) {
                HeroBullet heroBullet = (HeroBullet) bullet;
                if (heroBullet.isHoming()) {
                    heroBullet.trackTarget(findNearestEnemy(heroBullet));
                }
            }
            bullet.forward();
        }
        for (BaseBullet bullet : enemyBullets) {
            bullet.forward();
        }
    }

    private AbstractAircraft findNearestEnemy(BaseBullet bullet) {
        AbstractAircraft nearest = null;
        int bestDistance = Integer.MAX_VALUE;
        for (AbstractAircraft enemyAircraft : enemyAircrafts) {
            if (enemyAircraft.notValid()) {
                continue;
            }
            int dx = enemyAircraft.getLocationX() - bullet.getLocationX();
            int dy = enemyAircraft.getLocationY() - bullet.getLocationY();
            int distance = dx * dx + dy * dy;
            if (distance < bestDistance) {
                bestDistance = distance;
                nearest = enemyAircraft;
            }
        }
        return nearest;
    }

    private void aircraftsMoveAction() {
        for (AbstractAircraft enemyAircraft : enemyAircrafts) {
            enemyAircraft.forward();
        }
        for (AbstractSupply supply : supplies) {
            supply.forward();
        }
    }

    private void crashCheckAction() {
        if (!heroAircraft.isDodging()) {
            for (BaseBullet bullet : enemyBullets) {
                if (bullet.notValid()) {
                    continue;
                }
                if (heroAircraft.crash(bullet) || bullet.crash(heroAircraft)) {
                    heroAircraft.decreaseHp(bullet.getPower());
                    bullet.vanish();
                }
            }
        }

        for (BaseBullet bullet : heroBullets) {
            if (bullet.notValid()) {
                continue;
            }
            for (AbstractAircraft enemyAircraft : enemyAircrafts) {
                if (enemyAircraft.notValid()) {
                    continue;
                }
                if (enemyAircraft.crash(bullet)) {
                    enemyAircraft.decreaseHp(bullet.getPower());
                    if (audioEnabled) {
                        SoundManager.playBulletHit();
                    }
                    bullet.vanish();
                    if (enemyAircraft.notValid()) {
                        EnemyAircraft defeatedEnemy = (EnemyAircraft) enemyAircraft;
                        if (defeatedEnemy.grantDefeatReward()) {
                            score += scoreForEnemy(enemyAircraft);
                            maybeGenerateSupply(enemyAircraft);
                            if (enemyAircraft instanceof BossEnemy) {
                                triggerGameClear();
                                return;
                            }
                        }
                    }
                    break;
                }
                if (!heroAircraft.isDodging()
                        && (enemyAircraft.crash(heroAircraft) || heroAircraft.crash(enemyAircraft))) {
                    enemyAircraft.vanish();
                    heroAircraft.decreaseHp(Integer.MAX_VALUE);
                }
            }
        }

        for (AbstractSupply supply : supplies) {
            if (supply.notValid()) {
                continue;
            }
            if (heroAircraft.crash(supply) || supply.crash(heroAircraft)) {
                if (audioEnabled) {
                    SoundManager.playSupply();
                }
                supply.effect(heroAircraft, this);
            }
        }
    }

    private int scoreForEnemy(AbstractAircraft enemyAircraft) {
        if (enemyAircraft instanceof BossEnemy) {
            return 3000;
        }
        if (enemyAircraft instanceof EliteProEnemy) {
            return 35;
        }
        if (enemyAircraft instanceof ElitePlusEnemy) {
            return 25;
        }
        if (enemyAircraft instanceof EliteEnemy) {
            return 20;
        }
        return 10;
    }

    private void maybeGenerateSupply(AbstractAircraft enemyAircraft) {
        AbstractSupply supply = SupplySimpleFactory.createSupplyForEnemy(enemyAircraft);
        if (supply != null) {
            supplies.add(supply);
        }
    }

    private boolean canEnemyShoot(AbstractAircraft enemyAircraft) {
        return enemyAircraft instanceof EnemyAircraft
                && ((EnemyAircraft) enemyAircraft).canShootNow()
                && (enemyAircraft instanceof EliteEnemy
                || enemyAircraft instanceof ElitePlusEnemy
                || enemyAircraft instanceof EliteProEnemy
                || enemyAircraft instanceof BossEnemy);
    }

    public void activateBomb(AbstractSupply bombSupply) {
        if (audioEnabled) {
            SoundManager.playBombExplosion();
        }
        registerSupplyObservers(bombSupply);
        bombSupply.getEffectSubject().notifyBombObservers();

        for (AbstractAircraft enemyAircraft : enemyAircrafts) {
            if (enemyAircraft instanceof EnemyAircraft && enemyAircraft.notValid()) {
                EnemyAircraft defeatedEnemy = (EnemyAircraft) enemyAircraft;
                if (defeatedEnemy.grantDefeatReward()) {
                    score += scoreForEnemy(enemyAircraft);
                }
            }
        }
    }

    public void activateFreeze(AbstractSupply freezeSupply) {
        registerSupplyObservers(freezeSupply);
        freezeSupply.getEffectSubject().notifyFreezeObservers();
    }

    private void registerSupplyObservers(AbstractSupply supply) {
        supply.getEffectSubject().clearObservers();
        for (AbstractAircraft enemyAircraft : enemyAircrafts) {
            if (!enemyAircraft.notValid() && enemyAircraft instanceof EnemyAircraft) {
                supply.getEffectSubject().addObserver((EnemyAircraft) enemyAircraft);
            }
        }
        for (BaseBullet bullet : enemyBullets) {
            if (!bullet.notValid()) {
                supply.getEffectSubject().addObserver(bullet);
            }
        }
    }

    private void triggerGameClear() {
        finishGame(true);
    }

    private void postProcessAction() {
        enemyBullets.removeIf(AbstractFlyingObject::notValid);
        heroBullets.removeIf(AbstractFlyingObject::notValid);
        enemyAircrafts.removeIf(AbstractFlyingObject::notValid);
        supplies.removeIf(AbstractFlyingObject::notValid);
    }

    private void checkResultAction() {
        if (heroAircraft.getHp() <= 0 && !gameOverFlag && !gameClearFlag) {
            finishGame(false);
        }
    }

    public void tryRestart() {
        if (!gameOverFlag && !gameClearFlag) {
            return;
        }
        restartGame();
    }

    private void finishGame(boolean victory) {
        if (leaderboardHandled) {
            return;
        }
        leaderboardHandled = true;
        gameClearFlag = victory;
        gameOverFlag = !victory;
        timer.cancel();
        SoundManager.stopBossBgm();
        SoundManager.stopBgm();
        if (audioEnabled && !victory) {
            SoundManager.playGameOver();
        }
        if (victory) {
            System.out.println("Victory!");
        } else {
            System.out.println("Game Over!");
        }
        repaint();
        if (resultPresentationEnabled) {
            persistAndShowLeaderboard(victory);
        }
    }

    private void persistAndShowLeaderboard(boolean victory) {
        ScoreRecord currentRecord = new ScoreRecord(
                difficulty.getDisplayName(),
                "",
                score,
                LocalDateTime.now()
        );
        List<ScoreRecord> records = new LinkedList<>();
        try {
            records.addAll(leaderboardDao.findAll());
        } catch (RuntimeException exception) {
            exception.printStackTrace();
        }
        printLeaderboardToConsole(records);

        final String resultText = victory ? "YOU WIN" : "GAME OVER";
        SwingUtilities.invokeLater(() -> {
            Window owner = SwingUtilities.getWindowAncestor(this);
            LeaderboardDialog leaderboardDialog =
                    new LeaderboardDialog(owner, resultText, leaderboardDao, currentRecord, this::restartGame);
            leaderboardDialog.setVisible(true);
            requestFocusInWindow();
        });
    }

    private void printLeaderboardToConsole(List<ScoreRecord> records) {
        System.out.println("===== Total Leaderboard =====");
        System.out.printf("%-4s %-12s %-24s %-8s %-19s%n", "Rank", "Difficulty", "Player", "Score", "Time");
        for (int i = 0; i < records.size(); i++) {
            ScoreRecord record = records.get(i);
            System.out.printf(
                    "%-4d %-12s %-24s %-8d %-19s%n",
                    i + 1,
                    record.getDifficulty(),
                    record.getPlayerName(),
                    record.getScore(),
                    record.formatPlayedAt()
            );
        }
        System.out.println("=============================");
    }

    private void restartGame() {
        SoundManager.stopBgm();
        SoundManager.stopBossBgm();
        HeroAircraft.resetInstance();
        Window owner = SwingUtilities.getWindowAncestor(this);
        GameDifficulty nextDifficulty = GameDifficulty.select(owner);
        Game newGame = Game.create(nextDifficulty);
        Container container = owner;
        if (container != null) {
            container.remove(this);
            container.add(newGame);
            container.validate();
            container.repaint();
            newGame.requestFocusInWindow();
            newGame.action();
        }
    }

    HeroAircraft getHeroAircraftForTest() {
        return heroAircraft;
    }

    void evaluateGameResultForTest() {
        checkResultAction();
    }

    boolean isGameOverForTest() {
        return gameOverFlag;
    }

    protected int getTime() {
        return time;
    }

    protected void refreshActiveEnemyShootStrategies(double enemyBulletPowerMultiplier, double enemyBulletSpeedMultiplier) {
        for (AbstractAircraft enemyAircraft : enemyAircrafts) {
            if (!enemyAircraft.notValid() && enemyAircraft instanceof EnemyAircraft) {
                EnemySimpleFactory.refreshShootStrategy(
                        (EnemyAircraft) enemyAircraft,
                        enemyBulletPowerMultiplier,
                        enemyBulletSpeedMultiplier
                );
            }
        }
    }

    protected abstract int getInitialEnemyMaxNumber();

    protected abstract double getInitialEnemySpawnCycle();

    protected abstract double getInitialHeroShootCycle();

    protected abstract double getInitialEnemyShootCycle();

    protected abstract boolean canGenerateBoss();

    protected abstract int getBossTriggerScore();

    protected abstract AbstractAircraft createEnemyAircraft(int gameTime, boolean bossPresent);

    protected abstract AbstractAircraft createBossEnemy();

    protected void updateDifficultyAction() {
    }

    @Override
    public void paint(Graphics g) {
        super.paint(g);
        Graphics2D g2d = (Graphics2D) g.create();

        g2d.drawImage(backgroundImage, 0, this.backGroundTop - Main.WINDOW_HEIGHT, null);
        g2d.drawImage(backgroundImage, 0, this.backGroundTop, null);
        this.backGroundTop += 1;
        if (this.backGroundTop == Main.WINDOW_HEIGHT) {
            this.backGroundTop = 0;
        }

        paintImageWithPositionRevised(g2d, enemyAircrafts);
        paintImageWithPositionRevised(g2d, supplies);

        if (heroController.isShiftPressed()) {
            paintHeroBoostEffect(g2d);
        }

        g2d.drawImage(
                ImageManager.HERO_IMAGE,
                heroAircraft.getLocationX() - heroAircraft.getRenderWidth() / 2,
                heroAircraft.getLocationY() - heroAircraft.getRenderHeight() / 2,
                heroAircraft.getRenderWidth(),
                heroAircraft.getRenderHeight(),
                null
        );
        paintImageWithPositionRevised(g2d, enemyBullets);
        paintImageWithPositionRevised(g2d, heroBullets);

        g2d.setColor(heroAircraft.isDodging() ? Color.CYAN : Color.RED);
        g2d.fillOval(
                heroAircraft.getLocationX() - heroAircraft.getHitboxWidth() / 2,
                heroAircraft.getLocationY() - heroAircraft.getHitboxHeight() / 2,
                heroAircraft.getHitboxWidth(),
                heroAircraft.getHitboxHeight()
        );

        paintScoreAndLife(g2d);
        g2d.dispose();
    }

    private void paintHeroBoostEffect(Graphics2D g2d) {
        int centerX = heroAircraft.getLocationX();
        int centerY = heroAircraft.getLocationY();

        g2d.setComposite(AlphaComposite.getInstance(AlphaComposite.SRC_OVER, 0.18f));
        g2d.setColor(new Color(120, 255, 255));
        g2d.fillOval(centerX - 34, centerY - 34, 68, 68);

        int dx = centerX - heroTrailX;
        int dy = centerY - heroTrailY;
        for (int i = 1; i <= 3; i++) {
            float alpha = 0.16f - i * 0.03f;
            if (alpha <= 0) {
                continue;
            }
            g2d.setComposite(AlphaComposite.getInstance(AlphaComposite.SRC_OVER, alpha));
            int trailX = centerX - dx * i / 2;
            int trailY = centerY - dy * i / 2;
            int width = heroAircraft.getRenderWidth() - i * 4;
            int height = heroAircraft.getRenderHeight() - i * 4;
            g2d.drawImage(
                    ImageManager.HERO_IMAGE,
                    trailX - width / 2,
                    trailY - height / 2,
                    width,
                    height,
                    null
            );
        }
        g2d.setComposite(AlphaComposite.SrcOver);
        g2d.setColor(new Color(180, 255, 255, 180));
        g2d.drawOval(centerX - 24, centerY - 24, 48, 48);
    }

    private void paintImageWithPositionRevised(Graphics g, List<? extends AbstractFlyingObject> objects) {
        if (objects.isEmpty()) {
            return;
        }

        for (AbstractFlyingObject object : objects) {
            BufferedImage image = object.getImage();
            assert image != null : objects.getClass().getName() + " has no image!";
            g.drawImage(
                    image,
                    object.getLocationX() - image.getWidth() / 2,
                    object.getLocationY() - image.getHeight() / 2,
                    null
            );
        }
    }

    private void paintScoreAndLife(Graphics g) {
        int x = 10;
        int y = 25;
        g.setColor(Color.RED);
        g.setFont(new Font("SansSerif", Font.BOLD, 22));
        g.drawString("SCORE: " + this.score, x, y);
        y += 20;
        g.drawString("LIFE: " + this.heroAircraft.getHp(), x, y);
        y += 20;
        g.drawString("MODE: " + difficulty.getDisplayName(), x, y);
        if (heroAircraft.isFreezeActive()) {
            y += 20;
            g.drawString("FREEZE", x, y);
        }
        if (heroAircraft.isHomingActive()) {
            y += 20;
            g.drawString("HOMING", x, y);
        }
        if (heroAircraft.isCircleShootActive() || heroAircraft.isScatterShootActive()) {
            y += 20;
            g.drawString("SHOT: " + heroAircraft.getShootModeName(), x, y);
        }
        if (heroAircraft.isDodging()) {
            y += 20;
            g.drawString("DODGE", x, y);
        } else if (heroAircraft.getDodgeCooldown() > 0) {
            y += 20;
            g.drawString("DODGE CD: " + heroAircraft.getDodgeCooldown() / 25, x, y);
        }
        if (gameClearFlag) {
            g.setColor(Color.YELLOW);
            g.setFont(new Font("SansSerif", Font.BOLD, 36));
            g.drawString("YOU WIN", Main.WINDOW_WIDTH / 2 - 90, Main.WINDOW_HEIGHT / 2);
        }
    }
}
