@startuml
title Aircraft Difficulty Template Method Pattern

left to right direction
skinparam backgroundColor #FAFAF7
skinparam shadowing false
skinparam roundcorner 12
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
hide empty members

skinparam package {
    BackgroundColor #FFFDF5
    BorderColor #C9B98F
}

skinparam class {
    BackgroundColor #FFF8E7
    BorderColor #7A6A43
    ArrowColor #5D6B75
    FontColor #2F2A22
}

package "template" {
    abstract class Game <<AbstractClass>> {
        + final action(): void
        # updateDifficultyAction(): void
        # createEnemyAircraft(time, bossPresent): AbstractAircraft
        # createBossEnemy(): AbstractAircraft
        # canGenerateBoss(): boolean
        # getBossTriggerScore(): int
    }
}

package "concrete games" {
    class EasyGame <<ConcreteClass>>
    class NormalGame <<ConcreteClass>>
    class HardGame <<ConcreteClass>>
}

Game <|-- EasyGame
Game <|-- NormalGame
Game <|-- HardGame

note right of Game
模板方法用action()解决游戏的loop问题
end note

note bottom of EasyGame
难度不随游戏时间变化，全程保持初始设定
end note

note bottom of NormalGame
敌机产生周期、敌机速度、敌机血量
end note

note bottom of HardGame
敌机产生周期、敌机速度、敌机血量、英雄机射击周期、敌机射击周期
end note

@enduml
